--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.15",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.1.3",
+    "@fontsource-variable/montserrat": "^5.1.0",
+    "@fontsource-variable/onest": "^5.1.0",
+    "astro": "^5.0.9",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
   }
 }
